<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.valkeyry</groupId>
        <artifactId>valkeyry-config-plugin</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>valkeyry-config-plugin-core</artifactId>
    <packaging>jar</packaging>
    <name>Valkeyry Config Plugin :: Core</name>
    <description>Shared logic for Maven and Gradle plugins: manifest parsing, SHA-256 fingerprint, JDK HttpClient batch ingestion, technical auth.</description>

    <properties>
        <java.version>21</java.version>
        <jackson.version>2.18.0</jackson.version>
        <snakeyaml.version>2.3</snakeyaml.version>
    </properties>

    <!--
        Force the Jackson stack to ${jackson.version}. The reactor parent imports
        spring-boot-dependencies which dependency-manages jackson-core / jackson-annotations
        to an older version; without overriding it here, jackson-databind 2.18 mixes with
        jackson-core 2.17.x at runtime and throws NoSuchMethodError on ParserMinimalBase.
    -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Zero Spring Boot dependency on purpose: plugin-core must be lightweight
             and runnable inside a Maven Mojo or Gradle task classpath. -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.26.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
